--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin:2rem;
-  background-image: url("https://wallpapercave.com/wp/wp5805427.gif");
+  background-image: url("https://marketplace.canva.com/EADaov-Uw3Q/1/0/1600w/canva-dark-blue-astronaut-motivational-desktop-wallpaper-54LOl01C2ws.jpg");
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
