css of view all button

--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -26,6 +26,7 @@
     width: 10rem;
     height:2rem;
     margin-left: 5rem;
+    border-radius:10px;
     background-color: rgb(197, 198, 201);
     font-size:1.2rem ;
     font-family: cursive;
