--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@
 
 .cardh{
   color:rgb(240, 242, 247);
-  margin-right: 20px;
+  margin-right: 2rem;
   position: fixed;
   top: 7rem;
   left: 2rem;
@@ -44,7 +44,7 @@
 }
 .card{
   color: white;
-  margin-right: 20px;
+  margin-right: 2rem;
   position: fixed;
   top: 1rem;
   left: 2rem;
@@ -53,7 +53,7 @@
 
 .cardv{
   color: white;
-  margin-right: 20px;
+  margin-right: 2rem;
   position: fixed;
   top: 4rem;
   left: 2rem;
