--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -9,7 +9,7 @@
     font-size: 1.9rem ;
     background-color: rgb(12, 127, 204);
     width: 3rem;
-    border-radius: 5px;
+    border-radius: .5rem;
     margin:0.5rem;
 }
 
@@ -17,7 +17,7 @@
     font-size:1.5rem ;
     width: 15rem;
     height:1.9rem;
-    border-radius: 10px;
+    border-radius: 1rem;
     padding: 0.5rem;
     outline:none
 }
@@ -26,7 +26,7 @@
     width: 10rem;
     height:2rem;
     margin-left: 5rem;
-    border-radius:10px;
+    border-radius:1rem;
     background-color: rgb(197, 198, 201);
     font-size:1.2rem ;
     font-family: cursive;
