--- a/src/components/Todo.module.css
+++ b/src/components/Todo.module.css
@@ -8,16 +8,16 @@
     font-size:2rem ;
     background-color: rgb(12, 127, 204);
     width: 3rem;
-    border-radius: 5px;
+    border-radius: .5rem;
     margin:0.5rem;
 }
 
 .deleteBtn{
-    color:rgb(241, 250, 241);
+    color:rgb(29, 39, 29);
     font-size:2rem ;
     background-color: rgb(216, 14, 14);
     width: 3rem;
-    border-radius: 5px;
+    border-radius: .5rem;
     margin:0.5rem;
 }
 .listi{
@@ -27,7 +27,7 @@
     height:2.7rem;
     border-width: 1rem;
     background-color: rgb(175, 161, 139);
-    border-radius: 5px;
+    border-radius: .5rem;
     border-color: rgb(92, 91, 90);
     margin:0.5rem;
     padding:0.2rem;
