--- a/src/components/UserPopup.module.css
+++ b/src/components/UserPopup.module.css
@@ -2,7 +2,7 @@
     font-size:1.5rem ;
     width: 11rem;
     height:1.9rem;
-    border-radius: 10px;
+    border-radius: 1rem;
     padding: 0.5rem;
     outline:none
 }
@@ -17,7 +17,7 @@
     font-size: 1.5rem ;
     background-color: rgb(12, 127, 204);
     width: 5rem;
-    border-radius: 5px;
+    border-radius: .5rem;
     margin:0.5rem;
     padding-left: 0.3rem;
 }
