--- a/src/components/viewUuid.module.css
+++ b/src/components/viewUuid.module.css
@@ -3,7 +3,7 @@
     font-size: 1.9rem ;
     background-color: rgb(12, 127, 204);
     width: 3rem;
-    border-radius: 5px;
+    border-radius: .5rem;
     margin:0.5rem;
     padding-left: 0.3rem;
 
@@ -12,7 +12,7 @@
     font-size:1.5rem ;
     width: 15rem;
     height:1.9rem;
-    border-radius: 10px;
+    border-radius: 1rem;
     padding: 0.5rem;
     outline:none
 }
