--- a/src/pages/createTodo/createTodo.module.css
+++ b/src/pages/createTodo/createTodo.module.css
@@ -5,8 +5,8 @@
     font-size: 1rem;
     width:4rem ;
     height: 3rem ;
-    border-radius: 10px;
-    border-width: 1px;
+    border-radius: 1rem;
+    border-width: .1rem;
     border-color: white;
 }
 
@@ -21,5 +21,5 @@
     justify-content:center;
     padding: 2rem;
     position: relative;
-    bottom:10px;
+    bottom:1rem;
 }
