--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -33,3 +33,22 @@
     font-size:1.2rem ;
     font-family: cursive;
 }
+
+@media (max-width:375px) {
+    .option{
+        width: 5rem;
+        height: 1.7rem;
+        font-size: .9rem ;
+    }
+    .inputs{
+        font-size:1rem ;
+        width: 11rem;
+        height:1.9rem;
+        border-radius: 1rem;
+        padding: 1.3rem;
+    }
+    .submitBtn{
+        width: 2.4rem;
+        font-size: 1.3rem;
+    }
+}
