--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,8 @@
 
 body {
   margin:2rem;
-  background-image: url("https://marketplace.canva.com/EADaov-Uw3Q/1/0/1600w/canva-dark-blue-astronaut-motivational-desktop-wallpaper-54LOl01C2ws.jpg");
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color:black;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 
 code {
