--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,7 +1,6 @@
 .modalbg{
     width: 40rem;
     height: 10rem;
-    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,7 +10,7 @@
   border-radius: 1rem;
   width: 50rem;
   height: 40rem;
-  background-color: lightgray;
+  background-color:rgb(168, 164, 164);
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   display: flex;
   flex-direction: column;
@@ -22,5 +21,4 @@
     border-radius: 2rem;
     background-color: transparent;
     width: 8rem;
-    justify-content: flex-end;
 }
