--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -3,16 +3,16 @@
     justify-content:center;
     padding: auto;
     display:flex;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .submitBtn{
     color:rgb(241, 250, 241);
     font-size: 1.9rem ;
     background-color: rgb(12, 127, 204);
-    width: 3rem;
+    width: 3.5rem;
     border-radius: .5rem;
-    margin:0.5rem;
+    margin: 2rem;
 }
 
 .inputs{
@@ -20,14 +20,13 @@
     width: 15rem;
     height:1.9rem;
     border-radius: 1rem;
-    padding: 1.3rem;
+    padding: 1.4rem;
     outline:none;
 }
 
 .option{
     width: 7rem;
     height:2rem;
-    margin-left: 1.3rem;
     border-radius:1rem;
     background-color: rgb(197, 198, 201);
     font-size:1.2rem ;
@@ -38,17 +37,16 @@
     .option{
         width: 5rem;
         height: 1.7rem;
-        font-size: .9rem ;
+        font-size: .8rem ;
     }
     .inputs{
         font-size:1rem ;
-        width: 11rem;
+        width: 15rem;
         height:1.9rem;
         border-radius: 1rem;
         padding: 1.3rem;
     }
     .submitBtn{
-        width: 2.4rem;
-        font-size: 1.3rem;
+        font-size: 1.7rem;
     }
 }
