--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,6 @@
   display:flex;
   justify-content: center;
   justify-content: space-around;
-  margin-bottom:8%
 }
 
 .cardh{
@@ -49,19 +48,27 @@
 }
 
 .about-btn{
-  background-color: rgb(96, 98, 231);
-  border-color:rgb(10, 118, 226);
-  border-width: .1rem;
+  background-color: rgb(231, 177, 96);
+  border-color:#f1eeeb;
+  border-width: .2rem;
   font-size: 1.5rem;
   width: 10rem;
   height: 2.7rem;
   border-radius: .5rem;
   color: rgb(230, 233, 240);
+  margin:4%;
 }
+
+.lsindiv{
+  display:flex;
+  justify-content:left;
+  margin: 3rem;
+}
+
 .himage{
   border-radius: 25rem;
   /* height: 40rem; */
-  width: 30%;
+  width: 25%;
 }
 .himage2{
   border-radius: 20rem;
@@ -83,18 +90,6 @@
   font-size: 1.5rem;
 }
 
-.loginsignup{ 
-  background-color: black;
-  border-color:rgb(10, 118, 226);
-  border-width: .1rem;
-  font-size: 1.5rem;
-  width: 10rem;
-  height: 3rem;
-  border-radius: .5rem;
-  color: rgb(0, 81, 255);
-  display:flex;
-  justify-content:space-around;
-}
 
 @media (max-width:425px) {
   .head-text{
