--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -12,7 +12,8 @@
     background-color: rgb(12, 127, 204);
     width: 3.5rem;
     border-radius: .5rem;
-    margin: 2rem;
+    margin-right: 3rem;
+    margin-left: 1rem
 }
 
 .inputs{
@@ -26,7 +27,7 @@
 
 .option{
     width: 7rem;
-    height:2rem;
+    height:2.5rem;
     border-radius:1rem;
     background-color: rgb(197, 198, 201);
     font-size:1.2rem ;
