--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 
 .home-text{
-  color:midnightblue;
+  color:tomato;
   border-radius: 2rem;
   padding: 0rem; 
   display: flex;
-  justify-content:flex-start;
+  justify-content:center;
   font-size: 1.5rem;
   font-family:sans-serif
 }
@@ -18,7 +18,7 @@
 }
 
 .linkss{
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-family: monospace;
   list-style-type: none;
   text-decoration: none;
@@ -32,12 +32,16 @@
   margin-right: 2rem;
   -ms-flex-align: flex-start;
   text-decoration: none;
+  background-color:rgb(65, 57, 57);
+  border-radius: .5rem;
 }
 .card{
   color:lightgray;
   margin-right: 2rem;
   -ms-flex-align:center;  
   text-decoration: none;
+  background-color:rgb(68, 63, 63);
+  border-radius: .5rem;
 }
 
 .cardv{
@@ -45,6 +49,8 @@
   margin-right: 2rem;
   -ms-flex-align:flex-end;
   text-decoration: none;
+  background-color:rgb(61, 58, 58);
+  border-radius: .5rem;
 }
 
 .about-btn{
@@ -52,40 +58,39 @@
   border-color:#f1eeeb;
   border-width: .2rem;
   font-size: 1.5rem;
-  width: 10rem;
+  width: 6rem;
   height: 2.7rem;
   border-radius: .5rem;
-  color: rgb(230, 233, 240);
-  margin:4%;
+  color:black;
+  margin-top:4%;
 }
 
 .lsindiv{
   display:flex;
-  justify-content:left;
+  justify-content:space-evenly;
   margin: 3rem;
 }
 
 .himage{
   border-radius: 25rem;
   /* height: 40rem; */
-  width: 25%;
+  width: 18%;
 }
 .himage2{
   border-radius: 20rem;
   visibility: hidden;
-  width: 80%;
-  margin: 10%
+  width: 52%;
+  margin: 20%
 }
 .wel-text{
-  color:lightskyblue;
+  color:khaki;
   border-radius: 2rem;
   display: flex;
   justify-content: center;
-  font-size: 3.5rem;
+  font-size: 3rem;
   font-family:sans-serif;
 }
- /* .text1{
- } */
+
 .text2{
   font-size: 1.5rem;
 }
