--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,10 @@
 body {
   margin:2rem;
   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  overflow: hidden;
+  /* overflow: hidden; */
   background-image: url('https://mocah.org/uploads/posts/4561048-cube-black-orange-white-shiny-reflection-minimalism-simple-3d.jpg');
   background-size: contain;
-  max-width: 100%
+  max-width: 100%;
 }
 
 code {
@@ -18,6 +18,5 @@ code {
 
 html{
   font-size: 90%;
-  overflow: hidden;
 }
 
