disabled imginstead of visibility none which was taking up space

--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,7 @@
 }
 .himage2{
   border-radius: 20rem;
-  visibility: hidden;
+  display:none;
   width: 52%;
   margin: 20%
 }
@@ -110,10 +110,10 @@
     font-size: 1rem;
   }  
   .himage{
-    visibility: hidden;
+    display:none;
   }
   .himage2{
-    visibility: visible;
+    display:flex;
   }
   .linkss{
     margin-bottom: 20%;
