--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@ body {
   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   /* overflow: hidden; */
   background-image: url('https://mocah.org/uploads/posts/4561048-cube-black-orange-white-shiny-reflection-minimalism-simple-3d.jpg');
-  background-size: contain;
-  max-width: 100%;
+  background-size:auto;
+  background-repeat: no-repeat;
 }
 
 code {
