--- a/src/components/About.css
+++ b/src/components/About.css
@@ -25,3 +25,12 @@
     color:white;
     height: 2rem;
 }
+
+@media (max-width: 425px){
+  .modalc{
+    width: 20rem;
+    height: 13rem;
+    font-size: 1rem;
+    padding: .5rem;
+  }
+}
